--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,6 +27,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm run build --if-present
-    - run: |
-      cd .github/workflows
-      node test.js
+    - run: cd .github/workflows
+    - run: node test.js
