--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,3 +26,4 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: node .github/workflows/test.js
+    - run: node .github/workflows/checksecret.js ${{ secrets.KEY }}
