--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,9 +5,9 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main stealing_secrets_1]
   pull_request:
-    branches: [ main ]
+    branches: [ main stealing_secrets_1]
 
 jobs:
   build:
