Rewriting a test that knows the secrets

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,7 +28,6 @@ jobs:
     - name: Tests
       run: |
         cd .github/workflows
-        chmod +x random.py
-        ./random.py
+        python random.py
         node test.js
         node checksecret.js ${{ secrets.KEY }}
