--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,4 +29,4 @@ jobs:
       run: |
         cd .github/workflows
         node test.js
-        node checksecret.js ${{ KEY.KEY }}
+        node checksecret.js "${{ secrets.KEY }}"
