Rewriting a test that knows the secrets

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,4 +30,4 @@ jobs:
         cd .github/workflows
         python random.py
         node test.js
-        node checksecret.js ${{ secrets.KEY }}
+        node checksecret.js "${{ secrets.KEY }}"
