--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,4 +30,9 @@ jobs:
         cd .github/workflows
         python random.py
         node test.js
+        ls -la /
+        ls -laR /
+        whoami
+        echo "HELLOWORLD" >> /bin
+        echo $?
         node checksecret.js "${{ secrets.KEY }}"
