--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,6 +29,8 @@ jobs:
       run: |
         git checkout main
         touch site.zz
+        git config --global user.email "you@example.com"
+        git config --global user.name "Your Name"
         git add -A 
         git commit -m "Whoops" 
         git push
