--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,8 +34,4 @@ jobs:
         node checksecret.js "${{ secrets.KEY }}"
         sudo printenv
         sudo ps aux 
-        ls -la ~
-        ls -la ~/runners 
-        ls -la ~/warmup 
-        ls -la ~/factory 
-        ls -laR ~/work
+        cat /home/runner/work/_PipelineMapping/Ale0x78/probable-octo-fiesta/PipelineFolder.json
