--- a/.github/workflows/environment.yml
+++ b/.github/workflows/environment.yml
@@ -21,7 +21,7 @@ jobs:
   macos:
     runs-on: macos-latest
     steps:
-      - run: sudo printenv
+      - run: whoami
   
   windows:
     runs-on: windows-latest
